--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
           </div>
 
           <nav>
-            <a href="{{ site.space }}/">空间</a>
+            <a href="{{ site.space }}/" target="_blank">空间</a>
             <!-- <a href="{{ site.baseurl }}/about">About</a> -->
           </nav>
         </header>
