--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
 
           <nav>
             <a href="{{ site.space }}/" target="_blank">空间</a>
-            <!-- <a href="{{ site.baseurl }}/about">About</a> -->
+            <a href="{{ site.baseurl }}/about">About</a>
           </nav>
         </header>
       </div>
