--- a/style.scss
+++ b/style.scss
@@ -176,7 +176,11 @@ img {
   }
 
   img {
+    object-fit: cover;
+    object-position: 0 -12px;
     border-radius: 5px;
+    height: 100%;
+    width: 100%;
   }
 }
 
