--- a/style.scss
+++ b/style.scss
@@ -257,12 +257,16 @@ nav {
 
 .post {
   blockquote {
-    margin: 1.8em .8em;
+    // margin: 1.8em .8em;
     border-left: 2px solid $gray;
     padding: 0.1em 1em;
     color: $gray;
     font-size: 22px;
     font-style: italic;
+
+    > p {
+      margin: 10px 0;
+    }
   }
 
   .comments {
