--- a/style.scss
+++ b/style.scss
@@ -258,14 +258,17 @@ nav {
 .post {
   blockquote {
     // margin: 1.8em .8em;
-    border-left: 2px solid $gray;
-    padding: 0.1em 1em;
+    // border-left: 2px solid $gray;
+    // padding: 0.1em 1em;
+    // color: $gray;
+    // font-size: 22px;
+    // font-style: italic;
+    padding: 0 1em;
     color: $gray;
-    font-size: 22px;
-    font-style: italic;
+    border-left: 0.25em solid $gray;
 
     > p {
-      margin: 10px 0;
+      margin: 0;
     }
   }
 
