--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -5,7 +5,11 @@
 
 // Colors
 $blue: #4183C4;
-
+$primary-color: #4285F4;
+$success-color : #3ECF8E;
+$warning-color : #FFDB5C;
+$error-color : #F56C6C;
+$info-color : #87BBFD;
 // Grays
 $black: #000;
 $darkerGray: #222;
