--- a/style.scss
+++ b/style.scss
@@ -251,6 +251,12 @@ nav {
     background: #eee;
     padding: 0 1rem;
     border-radius: 8px;
+    &:nth-child(2n) {
+      color: $success-color
+    }
+    &:nth-child(2n - 1) {
+      color: $primary-color
+    }
   }
 }
 
