--- a/style.scss
+++ b/style.scss
@@ -21,6 +21,8 @@ body {
 	background: $white;
   font: 18px/1.4 $helvetica;
   color: $darkGray;
+  background: url('../images/bg.jpg') no-repeat;
+  background-size: cover;
 }
 
 .container {
