--- a/style.scss
+++ b/style.scss
@@ -21,9 +21,9 @@ body {
 	background: $white;
   font: 18px/1.4 $helvetica;
   color: $darkGray;
-  background: url('../images/bg.jpg') no-repeat;
-  background-size: cover;
-  background-attachment: fixed;
+//   background: url('../images/bg.jpg') no-repeat;
+//   background-size: cover;
+//   background-attachment: fixed;
 }
 
 .container {
