--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -24,7 +24,7 @@ code {
 .highlight .n { color: #a6e22e } /* Name */
 .highlight .o { color: #f92672 } /* Operator */
 .highlight .x { color: #CB4B16 } /* Other */
-.highlight .p { color: #a6e22e } /* Punctuation */
+.highlight .p { color: #f8f8f2 } /* Punctuation */
 .highlight .cm { color: #586E75 } /* Comment.Multiline */
 .highlight .cp { color: #f92672 } /* Comment.Preproc */
 .highlight .c1 { color: #586E75 } /* Comment.Single */
