--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -1,7 +1,7 @@
 
 .highlight {
 //   background-color: #efefef;
-  background-color: #111;
+  background-color: #f6f8fa;
   border-radius: 5px;
   padding: 7px 7px 7px 10px;
   // border: 1px solid #ddd;
