--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
       <div class="container">
         <header class="masthead clearfix">
           <!-- <a href="{{ site.baseurl }}/" class="site-avatar"><img src="{{ site.avatar }}" /></a> -->
-          <a href="javascript:;" class="site-avatar"><img src="../images/me.jpg" /></a>
+          <a href="javascript:;" class="site-avatar"><img src="../static/me.jpg" /></a>
 
           <div class="site-info">
             <h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
